# pyqupath

./: .gitignore  README.md  pixi.toml  pyproject.toml  setup.py  test_imports.py
data/geojson/: test.geojson
notebooks/: pyqupath.ipynb  tma.ipynb
pyqupath/: annotation.py  buffer.py  color.py  constants.py  geojson.py  ometiff  ometiff.py  tiff.py  tma.py  utils.py
