[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqupath"
version = "0.0.5"
description = "QuPath Python utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
authors = [
    { name = "wuwenrui555", email = "wuwenruiwwr@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=1.0.1",
    "imagecodecs>=2024.12.30",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "tqdm-joblib>=0.0.4",
    "zarr>=2.18.3",
]

[project.urls]
Homepage = "https://github.com/wuwenrui555/pyqupath"
Repository = "https://github.com/wuwenrui555/pyqupath.git"

[tool.hatch.build.targets.wheel]
packages = ["pyqupath"]

[dependency-groups]
dev = [
    "pyqupath",
]

[tool.uv.sources]
pyqupath = { workspace = true }
