[project]
name = "pyqupath"
version = "0.2.0"
description = "QuPath utilities"
authors = [
    {name = "wuwenrui555",email = "wuwenruiwwr@outlook.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "numpy (>1.23,<2)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=1.5.2,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "scikit-image (>=0.19.3,<0.20.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tqdm-joblib (>=0.0.4,<0.0.5)",
    "imagecodecs (>=2024.12.30,<2025.0.0)",
    "matplotlib (>=3,<4)",
    "zarr (<3)",
    "tifffile (<2024.9.20)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
